<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Speedometer Alert</string>


    <string name="title_activity_config">Settings</string>
    <string name="title_activity_my_activitys">My activitys</string>
    <string name="action_settings">Settings</string>
    <string name="configs">Settings</string>

    <string name="bt_ok">OK</string>
    <string name="bt_cancel">Cancel</string>

    <string name="velocidade_atual">Current speed</string>
    <string name="velocidade_media">Average speed</string>
    <string name="velocidade_maxima">Maximum speed</string>


    <string name="grupo_informacoes_audio">Play the following information:</string>
    <string name="tempo">Time</string>
    <string name="distancia">Distance</string>
    <string name="atual">Current speed</string>
    <string name="media">Average speed</string>
    <string name="maxima">Maximum speed</string>
    <string name="vibrar">Vibrate</string>
    <string name="accuracy">GPS Accuracy</string>

    <string name="group_config_velocimetro">Settings speedometer</string>
    <string name="group_interval_audio">Playback Interval:</string>
    <string name="lista_intervalo">Distance / Time</string>
    <string name="intervalo_value_default">minutes</string>

    <string-array name="intervalo">
        <item>Distance (km)</item>
        <item>Time (minutes)</item>
    </string-array>
    <string-array name="intervalo_values">
        <item>kilometers</item>
        <item>minutes</item>
    </string-array>

    <string name="valor">Range value</string>
    <string name="info_ganho">
        The ELEVATION field shows the approximate value of the altimetry gain/loss of the route,
        almost in real time. The ELEVATION is calculated for each kilometer traveled and recalculated for
        better accuracy when the context is paused. The calculation is in a beta version, being able to give differences
        of the real value. The accuracy of the GPS interferes a lot in the calculation.
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="avaliar">Rating</string>
    <string name="compartilhar">Share</string>
    <string name="publico">Public</string>
    <string name="minhas_atividades">My activities (coming soon)</string>
    <string name="pause_automatico">Automatic Pause</string>
    <string name="site_helpdev">www.helpdev.com.br</string>
    <string name="atividades_sem_dados">ACTIVITY WITHOUT ENOUGH DATA FOR RECORDING.</string>
    <string name="aguarde_salvando">AWAIT, SAVING ...</string>
    <string name="arquivo_gravado_sucesso">GPX file successfully saved in: \n\n%s\n\n </string>
    <string name="erro_gravar_gpx">Error writing GPX file. {%s}</string>

    <string name="bloqueio_desativado">SCREEN LOCK: OFF</string>
    <string name="bloqueio_ativado">SCREEN LOCK: ON</string>
    <string name="confirme_sair">Do you really want to quit?</string>
    <string name="speek_velocidade_atual">Current speed of %d kilometers per hour</string>
    <string name="speek_media">Average of %s kilometers per hour</string>
    <string name="speek_maxima">Maximum of %d kilometers per hour</string>
    <string name="speek_distancia">Distance traveled %s kilometers</string>
    <string name="speek_tempo">%d minutos time</string>
    <string name="gps_impreciso">INACCURATE GPS</string>
    <string name="gps_desatualizado_sem_sinal">GPS DETACHED / WITHOUT SIGN</string>
    <string name="pausado_automaticamente">PAUSED AUTOMATICALLY</string>
    <string name="km_h">Km/h</string>
    <string name="km">Km</string>

    <string name="ganho">Elevation gain</string>
    <string name="ganho_neg">Elevation loss</string>
    <string name="altitudeAtual">Altitude</string>

    <!-- DEFAULT FOR ALL -->
    <string name="pref_pause_automatico">key_pause_automatico</string>
    <string name="pref_informar_tempo">key_informar_tempo</string>
    <string name="pref_informar_distancia">key_informar_distancia</string>
    <string name="pref_informar_vatual">key_informar_vatual</string>
    <string name="pref_informar_vmedia">key_informar_vmedia</string>
    <string name="pref_informar_vmax">key_informar_vmax</string>
    <string name="pref_vibrar">pref_vibrar</string>
    <string name="pref_intervalo">key_intervalo</string>
    <string name="pref_intervalo_valor">key_intervalo_valor</string>
    <string name="valor_default">1</string>
    <string name="default_max_hr">200</string>
    <string name="default_rest_hr">60</string>
    <string name="default_z1">66</string>
    <string name="default_z2">76</string>
    <string name="default_z3">83</string>
    <string name="default_z4">90</string>
    <string name="default_z5">95</string>

    <string name="impossivel_gravar_disco">impossible to write to disk.</string>
    <string name="share">Share</string>
    <string name="title_share">Share file with</string>
    <string name="em_desenvolvimento">IN DEVELOPMENT</string>
    <string name="elevation">Elevation</string>

    <string name="notification_execute">RUNNING...</string>
    <string name="notification_pause">PAUSED</string>
    <string name="notification_pause_automatic">PAUSED AUTOMATICALLY</string>
    <string name="text_null_value">- -</string>
    <string name="unit_temp">ºC</string>
    <string name="percent_humidity">%UR</string>
    <string name="unit_hr">bpm</string>
    <string name="unit_rpm">rpm</string>
    <string name="unit_bpm">bpm</string>

    <string name="pref_module_vel_alert">pref_module_vel_alert_bl</string>
    <string name="pref_module_vel_alert_name">pref_module_vel_alert_name</string>
    <string name="pref_module_vel_alert_address">pref_module_vel_alert_address</string>

    <string name="pref_hr_sensor">pref_hm_sensor</string>
    <string name="pref_hr_sensor_name">pref_hm_sensor_name</string>
    <string name="pref_hr_sensor_address">pref_hm_sensor_address</string>


    <string name="temperature">Temperature</string>
    <string name="cadence">Cadence</string>
    <string name="group_sensors">Sensors</string>

    <string name="bt_enable">Enable</string>
    <string name="bt_disable_module">Disable module</string>
    <string name="disable">Disable</string>
    <string name="disabled_bluetooth">Disabled bluetooth. Enable it</string>
    <string name="text_module_velalert">
         Select the OpenSource Speedometer Alert module from the list of paired devices..\n\n
         Learn more about the sensor at:  \n\n
        https://github.com/helpdeveloper/VelocimetroAlertaBLModule</string>
    <string name="title_velalert_module">Speedometer Alert Bluetooth Module</string>
    <string name="non_pairing_devices"><![CDATA[<- No paired devices ->]]></string>

    <string name="zones">Zones</string>
    <string name="heart_hate">Heart hate</string>
    <string name="group_personal">Personal information</string>
    <string name="click_to_edit">Click to edit</string>
    <string name="max_heart_rate">Max heart rate</string>
    <string name="resting_heart_rate">Resting heart rate</string>
    <string name="edit_heartrate_zones">Edit heart rate zones</string>

    <string name="z1_endurance">Z1 (Very Light)</string>
    <string name="z2_moderate">Z2 (Light)</string>
    <string name="z3_time">Z3 (Moderate)</string>
    <string name="z4_threshold">Z4 (Hard)</string>
    <string name="z5_anaerobic">Z5 (Maximum)</string>
    <string name="title_hr_sensor">Heartrate sensor</string>
    <string name="info_config_in_running">Pause the activity to edit the settings.</string>
</resources>
