<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_atividades"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/minhas_atividades" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/configs" />
    </group>

    <item android:title="@string/publico">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/compartilhar" />
            <item
                android:id="@+id/nav_star"
                android:icon="@drawable/ic_star2"
                android:title="@string/avaliar" />
        </menu>
    </item>

</menu>
